[package]
name = "candor_start"
version = "0.1.0"
authors = ["ShadowChild <shadychild12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
isahc = "1.1.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"